--- a/page.css
+++ b/page.css
@@ -346,3 +346,36 @@ footer ul li:hover {
         font-size: 14px;
     }
 }
+
+.container{
+    background-color: rgb(229,231,255);
+    height: 270px;
+    border-radius: 30px;
+    padding-top: 50px;
+
+}
+
+.title{
+    font-size: 38px ;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom:40px ;
+   
+}
+
+.stats-grid{
+    display: flex;
+    justify-content: space-around;
+}
+
+.stat-number{
+    font-size: 80px;
+    font-weight: bold;
+    color: rgb(78,71,255);
+}
+
+.stat-description{
+
+    font-size: 20px;
+    color:rgb(114,115,127) ;
+}
